WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174511
-Wreorder warning caused by GraphicsContext3D cleanup
https://bugs.webkit.org/show_bug.cgi?id=174511
Summary
-Wreorder warning caused by GraphicsContext3D cleanup
Michael Catanzaro
Reported
2017-07-14 10:38:59 PDT
Building CXX object Source...ics/cairo/GraphicsContext3DCairo.cpp.o In file included from ../../Source/WebCore/platform/graphics/cairo/GraphicsContext3DCairo.cpp:33:0: ../../Source/WebCore/platform/graphics/GraphicsContext3D.h: In constructor ‘WebCore::GraphicsContext3D::GraphicsContext3D(WebCore::GraphicsContext3DAttributes, WebCore::HostWindow*, WebCore::GraphicsContext3D::RenderStyle)’: ../../Source/WebCore/platform/graphics/GraphicsContext3D.h:1394:38: warning: ‘WebCore::GraphicsContext3D::m_compositorTexture’ will be initialized after [-Wreorder] GC3Duint m_compositorTexture { 0 }; ^ ../../Source/WebCore/platform/graphics/GraphicsContext3D.h:1392:24: warning: ‘GC3Duint WebCore::GraphicsContext3D::m_fbo’ [-Wreorder] GC3Duint m_fbo { 0 }; ^ ../../Source/WebCore/platform/graphics/cairo/GraphicsContext3DCairo.cpp:88:1: warning: when initialized here [-Wreorder] GraphicsContext3D::GraphicsContext3D(GraphicsContext3DAttributes attributes, HostWindow*, GraphicsContext3D::RenderStyle renderStyle) ^~~~~~~~~~~~~~~~~
Attachments
Patch
(1.82 KB, patch)
2017-07-14 10:54 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Patch
(3.09 KB, patch)
2017-07-14 11:04 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-07-14 10:54:58 PDT
Created
attachment 315448
[details]
Patch
Michael Catanzaro
Comment 2
2017-07-14 11:04:05 PDT
Created
attachment 315451
[details]
Patch
WebKit Commit Bot
Comment 3
2017-07-16 23:58:51 PDT
Comment on
attachment 315451
[details]
Patch Clearing flags on attachment: 315451 Committed
r219553
: <
http://trac.webkit.org/changeset/219553
>
WebKit Commit Bot
Comment 4
2017-07-16 23:58:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug