-Wreorder warning caused by GraphicsContext3D cleanup https://bugs.webkit.org/show_bug.cgi?id=174511

Reviewed by Carlos Garcia Campos.

* platform/graphics/cairo/GraphicsContext3DCairo.cpp:
(WebCore::GraphicsContext3D::GraphicsContext3D):
* platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:
(WebCore::GraphicsContext3D::GraphicsContext3D):


Canonical link: https://commits.webkit.org/191375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219553 268f45cc-cd09-0410-ab3c-d52691b4dbfc